push beberapa fitur tambahan dan revisi beberapa fitur

--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
   <body>
     <nav class="navbar">
       <a href="#" class="navbar-logo">
-        <img src="/img/logo-1.png" alt="GAB House of Prayer Sidoarjo" />
+        <img src="img/logo-1.png" alt="GAB House of Prayer Sidoarjo" />
 
         <div class="navbar-extra">
           <a href="#" id="hamburger-menu">
@@ -197,7 +197,7 @@
       <div class="ibadah-content">
         <div class="ibadah-wrapper">
           <div class="wrapper-image">
-            <img src="/img/Services/S06.jpg" alt="" />
+            <img src="img/Services/S06.jpg" alt="" />
             <p>
               <span>Pembicara:</span><br />
               Pdm. Sri Erna Sari, M.Th
@@ -225,7 +225,7 @@
 
         <div class="ibadah-wrapper">
           <div class="wrapper-image">
-            <img src="/img/Services/S11.jpg" alt="" />
+            <img src="img/Services/S11.jpg" alt="" />
             <p>
               <span>Pembicara:</span><br />
               Pdt. Hadi Triyono, M.Th
@@ -253,7 +253,7 @@
 
         <div class="ibadah-wrapper">
           <div class="wrapper-image">
-            <img src="/img/Services/S10.jpg" alt="" />
+            <img src="img/Services/S10.jpg" alt="" />
             <p>
               <span>Pembicara:</span><br />
               Pdt. Vincentius Wijono
@@ -281,7 +281,7 @@
 
         <div class="ibadah-wrapper">
           <div class="wrapper-image">
-            <img src="/img/Services/S13.jpg" alt="" />
+            <img src="img/Services/S13.jpg" alt="" />
             <p>
               <span>Pembicara:</span><br />
               Pdt. Yehuda Lilik Sugiyono
@@ -309,7 +309,7 @@
 
         <div class="ibadah-wrapper">
           <div class="wrapper-image">
-            <img src="/img/Services/S03.jpg" alt="" />
+            <img src="img/Services/S03.jpg" alt="" />
             <p>
               <span>Pembicara:</span><br />
               Pdt. Dr. Immanuel Suyono Indra, M.Th
@@ -337,7 +337,7 @@
 
         <div class="ibadah-wrapper">
           <div class="wrapper-image">
-            <img src="/img/Services/S04.jpg" alt="" />
+            <img src="img/Services/S04.jpg" alt="" />
             <p>
               <span>Pembicara:</span><br />
               Pdt. Yehuda Lilik Sugiyono
@@ -385,18 +385,8 @@
                 <h3 class="card-title">Welcome to Our Church</h3>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Labore officia perferendis quo doloribus enim eum porro
-                  commodi voluptas! Ipsam rem distinctio tempore earum nemo
-                  sapiente aspernatur ab, quo eligendi ipsa.
                 </p>
                 <div class="card-footer">
-                  <div class="card-profile">
-                    <img src="img/7.jpg" alt="Uesaka Sumire" />
-                    <div class="card-profile-info">
-                      <span class="card-profile-name">Uesaka Sumire</span>
-                      <span class="card-profile-role">Singer</span>
-                    </div>
-                  </div>
                   <a href="#" class="card-button">Read More</a>
                 </div>
               </div>
@@ -411,18 +401,8 @@
                 <h3 class="card-title">Welcome to Our Church</h3>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Labore officia perferendis quo doloribus enim eum porro
-                  commodi voluptas! Ipsam rem distinctio tempore earum nemo
-                  sapiente aspernatur ab, quo eligendi ipsa.
                 </p>
                 <div class="card-footer">
-                  <div class="card-profile">
-                    <img src="img/7.jpg" alt="Uesaka Sumire" />
-                    <div class="card-profile-info">
-                      <span class="card-profile-name">Uesaka Sumire</span>
-                      <span class="card-profile-role">Singer</span>
-                    </div>
-                  </div>
                   <a href="#" class="card-button">Read More</a>
                 </div>
               </div>
@@ -437,18 +417,8 @@
                 <h3 class="card-title">Welcome to Our Church</h3>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Labore officia perferendis quo doloribus enim eum porro
-                  commodi voluptas! Ipsam rem distinctio tempore earum nemo
-                  sapiente aspernatur ab, quo eligendi ipsa.
                 </p>
                 <div class="card-footer">
-                  <div class="card-profile">
-                    <img src="img/7.jpg" alt="Uesaka Sumire" />
-                    <div class="card-profile-info">
-                      <span class="card-profile-name">Uesaka Sumire</span>
-                      <span class="card-profile-role">Singer</span>
-                    </div>
-                  </div>
                   <a href="#" class="card-button">Read More</a>
                 </div>
               </div>
@@ -463,18 +433,8 @@
                 <h3 class="card-title">Welcome to Our Church</h3>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Labore officia perferendis quo doloribus enim eum porro
-                  commodi voluptas! Ipsam rem distinctio tempore earum nemo
-                  sapiente aspernatur ab, quo eligendi ipsa.
                 </p>
                 <div class="card-footer">
-                  <div class="card-profile">
-                    <img src="img/7.jpg" alt="Uesaka Sumire" />
-                    <div class="card-profile-info">
-                      <span class="card-profile-name">Uesaka Sumire</span>
-                      <span class="card-profile-role">Singer</span>
-                    </div>
-                  </div>
                   <a href="#" class="card-button">Read More</a>
                 </div>
               </div>
@@ -489,18 +449,8 @@
                 <h3 class="card-title">Welcome to Our Church</h3>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Labore officia perferendis quo doloribus enim eum porro
-                  commodi voluptas! Ipsam rem distinctio tempore earum nemo
-                  sapiente aspernatur ab, quo eligendi ipsa.
                 </p>
                 <div class="card-footer">
-                  <div class="card-profile">
-                    <img src="img/7.jpg" alt="Uesaka Sumire" />
-                    <div class="card-profile-info">
-                      <span class="card-profile-name">Uesaka Sumire</span>
-                      <span class="card-profile-role">Singer</span>
-                    </div>
-                  </div>
                   <a href="#" class="card-button">Read More</a>
                 </div>
               </div>
@@ -509,13 +459,109 @@
 
           <!-- If we need pagination -->
           <div class="swiper-pagination"></div>
-
-          <!-- If we need navigation buttons -->
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
         </div>
       </div>
+
+      <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
     </div>
+
+    <!-- Contact Us Section -->
+    <section id="kontak" class="contact-us">
+      <div class="subtitle">
+        <p class="title">Get In Touch</p>
+      </div>
+      <h2>Hubungi Kami</h2>
+
+      <div class="contact-content">
+        <div class="contact-info">
+          <div class="info-item">
+            <i data-feather="map-pin"></i>
+            <h3>Alamat</h3>
+            <p>Jl. Sidokare, Sidoarjo, Jawa Timur</p>
+          </div>
+          <div class="info-item">
+            <i data-feather="phone"></i>
+            <h3>Telepon</h3>
+            <p>+62 31 XXXX XXXX</p>
+          </div>
+          <div class="info-item">
+            <i data-feather="mail"></i>
+            <h3>Email</h3>
+            <p>info@gabhopesda.com</p>
+          </div>
+        </div>
+
+        <div class="contact-form">
+          <form>
+            <div class="form-group">
+              <input type="text" placeholder="Nama Anda" required />
+            </div>
+            <div class="form-group">
+              <input type="email" placeholder="Email Anda" required />
+            </div>
+            <div class="form-group">
+              <textarea placeholder="Pesan Anda" rows="5" required></textarea>
+            </div>
+            <button type="submit" class="cta">Kirim Pesan</button>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+      <div class="footer-content">
+        <div class="footer-section">
+          <h3>Gereja Allah Baik</h3>
+          <p>House of Prayer Sidoarjo</p>
+          <p>"Following Christ, Living His Love"</p>
+        </div>
+
+        <div class="footer-section">
+          <h3>Menu</h3>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#jadwal">Jadwal Ibadah</a></li>
+            <li><a href="#kontak">Kontak</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h3>Layanan</h3>
+          <ul>
+            <li><a href="#">Live Streaming</a></li>
+            <li><a href="#">Youth Ministry</a></li>
+            <li><a href="#">Prayer Group</a></li>
+            <li><a href="#">Community</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h3>Ikuti Kami</h3>
+          <div class="social-links">
+            <a href="#" class="social-icon">
+              <i data-feather="facebook"></i>
+            </a>
+            <a href="#" class="social-icon">
+              <i data-feather="youtube"></i>
+            </a>
+            <a href="#" class="social-icon">
+              <i data-feather="instagram"></i>
+            </a>
+            <a href="#" class="social-icon">
+              <i data-feather="twitter"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p>&copy; 2026 Gereja Allah Baik House of Prayer Sidoarjo. All rights reserved.</p>
+      </div>
+    </footer>
 
     <!-- Feather Icons -->
     <script>
