--- a/home.html
+++ b/home.html
@@ -475,22 +475,14 @@
       <h2>Hubungi Kami</h2>
 
       <div class="contact-content">
-        <div class="contact-info">
-          <div class="info-item">
-            <i data-feather="map-pin"></i>
-            <h3>Alamat</h3>
-            <p>Jl. Sidokare, Sidoarjo, Jawa Timur</p>
-          </div>
-          <div class="info-item">
-            <i data-feather="phone"></i>
-            <h3>Telepon</h3>
-            <p>+62 31 XXXX XXXX</p>
-          </div>
-          <div class="info-item">
-            <i data-feather="mail"></i>
-            <h3>Email</h3>
-            <p>info@gabhopesda.com</p>
-          </div>
+        <div class="map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3956.1446940674023!2d112.71176149999997!3d-7.449239500000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7e14a63820f4f%3A0x74606f98097b4fa0!2sSuncity%20Mall%20Marketing%20Office!5e0!3m2!1sen!2sid!4v1745852012819!5m2!1sen!2sid"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            class="map"
+          ></iframe>
         </div>
 
         <div class="contact-form">
@@ -559,7 +551,10 @@
       </div>
 
       <div class="footer-bottom">
-        <p>&copy; 2026 Gereja Allah Baik House of Prayer Sidoarjo. All rights reserved.</p>
+        <p>
+          &copy; 2026 Gereja Allah Baik House of Prayer Sidoarjo. All rights
+          reserved.
+        </p>
       </div>
     </footer>
 
